--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     </dependencies>
     <scm>
         <connection>scm:git:https://github.com/javaee-samples/javaee7-simple-sample.git</connection>
-        <url><https://github.com/satishchennu/javasimplesample.git/url>
+        <url>https://github.com/satishchennu/javaee7-simple-sample1.git</url>
         <developerConnection>scm:git:https://github.com/javaee-samples/javaee7-simple-sample.git</developerConnection>
         <tag>v1.5</tag>
     </scm>
